--- a/src/components/Textarea.css
+++ b/src/components/Textarea.css
@@ -1,7 +1,7 @@
 textarea::placeholder {
-    font-family: 'Arial', Helvetica, sans-serif;
+    font-family: 'Verdana', Helvetica, sans-serif;
 }
 
 input::placeholder {
-    font-family: 'Arial', Helvetica, sans-serif;
+    font-family: 'Verdana', Helvetica, sans-serif;
 }
